# thesis-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  subagents.yaml
.github/workflows/: ci.yml
examples/research/raw/: example-source.md
examples/style/samples/: sample-essay.md
examples/thesis/: outline.md
research/raw/: urls.txt
skills/citation-linter/: SKILL.md
skills/ingest-sources/: SKILL.md
skills/style-learner/: SKILL.md
skills/thesis-writer/: SKILL.md
skills/wiki-curator/: SKILL.md
skills/wiki-linter/: SKILL.md
src/thesis_agent/: __init__.py  agent.py  cli.py  config.py  memory.py  sandbox.py  subagents.py  tools.py
src/thesis_agent/ingest/: __init__.py  __main__.py  extract.py  manifest.py
tests/: test_agent_e2e.py  test_chat_tui.py  test_cli_helpers.py  test_cli_smoke.py  test_commands.py  test_config.py  test_copy_examples.py  test_cost_guards.py  test_extra_coverage.py  test_ingest.py  test_ingest_edges.py  test_loop_guard.py  test_memory.py  test_sandbox.py  test_sandbox_edges.py  test_schema.py  test_subagents.py  test_tools.py  test_wizard.py  test_wizard_key_source.py
